elements/create-document.css
/* Viewports < 700px */
@media (max-width: 700px) {
  .icons {
    width: 100%;
    height: 150px;
    position: absolute;
    top:calc(50% - 100px);
  }

  .create-document-jumbo-icon {
    width: 100%;
    height: 75px;
    margin-left: 20px;
    position: relative;
  }

  .create-document-jumbo-icon core-icon {
    height: 75px;
    width: 75px;
    color: white;
  }

  .create-document-jumbo-icon core-icon:hover {
    color: #9fa8da;
    cursor: pointer;
  }

  .create-document-jumbo-icon .subtitle {
    color: white;
    font-weight: 300;
    text-align: center;
    display: inline-block;
  }

  #load .create-document-jumbo-icon {
    position: absolute;
    text-align: center;
    left: 0;
    top: calc(50% - 175px);
    margin-left: 0;
  }

  core-icon #createDrive {
    display: inline-block;
  }

  #panel {
    background-color: white;
    height: 100%;
    width: 100%;
  }

  paper-input {
    width: 100%;
    margin-top: 10px;
  }

  #back {
    position: absolute;
    bottom:0;
    left: 0;
    background-color: #3f51b5;
    width: 50px;
    height: 50px;
    color: #fff;
    cursor: pointer;
  }

  .top core-icon {
    position: absolute;
    width: 50px;
    height: 50px;
    right: 10px;
    top: 37px;
  }
}

/* Viewports > 700px */
@media (min-width: 700px) {
  .icons {
    position: fixed;
    top: 50%;
    left: 50%;
    width: 510px;
    margin-top: -135px;
    margin-left: 250px;
  }

  .create-document-jumbo-icon {
    display: inline-block;
    position: relative;
  }

  .create-document-jumbo-icon core-icon {
    transition: all .5s;
    -webkit-transition: all .5s;
    height: 250px;
    width: 250px;
    color: white;
  }

  .create-document-jumbo-icon core-icon:hover {
    -webkit-transition: all .5s;
    transition: all .5s;
    color: #9fa8da;
    cursor: pointer;
  }

  .create-document-jumbo-icon .subtitle {
    color: white;
    font-weight: 300;
    text-align: center;
  }

  #load .create-document-jumbo-icon {
    position: absolute;
    left:calc(50% - 175px);
    top:calc(50% - 175px);
  }

  #panel {
    background-color: white;
    position: relative;
    width: 400px;
    height: 300px;
    margin-top: 200px;
    margin-left: calc(50% - 200px);
  }

  paper-input {
    width:350px;
    margin-top: 10px;
  }

  #back {
    border-radius: 25px;
    margin-left: -25px;
    margin-bottom: -25px;
  }

  .top core-icon {
    position: absolute;
    width: 80px;
    height: 80px;
    right: 10px;
    top: 10px;
  }
}

:host {
  width: 100%;
  height: 100%;
}

core-animated-pages {
  height: 100%;
}

section {
  overflow: hidden;
}

.create-document-jumbo-icon core-icon,
.create-document-jumbo-icon .subtitle {
  color: white;
}

#panelBackground {
  width: 100%;
  height: 100%;
  background-color: #8c9eff;
}

.top {
  color: white;
  position: relative;
  height: 100px;
  background-color: #3f51b5;
}

.top core-icon, h1 {
  display: inline-block;
  font-weight: 300;
}

.top h1 {
  margin: 60px 0 0 20px;
}

.top core-icon:hover {
  color: white;
}

#create .bottom {
  padding: 20px;
  height: 160px;
  overflow: auto;
}

paper-button {
  float: right;
  margin-top: 30px;
}

#back {
  position: absolute;
  bottom:0;
  left: 0;
  background-color: #3f51b5;
  width: 50px;
  height: 50px;
  color: #fff;
  cursor: pointer;
}

#load .bottom {
  height: 200px;
  overflow-y: scroll;
  overflow-x: hidden;
}

#load .bottom ul {
  list-style-type: none;
  padding: 0px;
  margin: 0;
}

#load .bottom li {
  transition: all .1s;
  cursor: pointer;
  padding: 5px 35px;
}

#load .bottom li:hover {
  transition: all .1s;
  background-color: #5c6bc0;
  color: #fff;
}

#loader1, #loader2 {
  position: absolute;
  width: 30px;
  height: 30px;
  left:calc(50% - 25px);
  transition: all 1s;
}

#loader1 {
  bottom: 50px;
}

#loader1.hidden {
  opacity: 0;
  z-index: -1;
  transition: all 1s;
}

